# gdrive-folder-sync

./: .gitignore  Makefile  Pipfile  gcopy.py  pyproject.toml  setup.cfg
gdrive_folder_sync/: __init__.py  gdrive.py
