[tool.poetry]
name = "gdrive_folder_sync"
version = "0.1.0"
description = ""
authors = ["Chanwoong Kim <me@chanwoong.kim>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
google-api-python-client = "^1.12.8"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
ptpython = "^3.0.7"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
flake8-pytest-style = "^1.3.0"
flake8-logging-format = "^0.6.0"
flake8-comprehensions = "^3.3.0"
flake8-builtins = "^1.5.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
pep8-naming = "^0.11.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
gdrive-folder-sync = 'gdrive_folder_sync.__init__:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
